--- a/iedu/templates/iedu/register.html
+++ b/iedu/templates/iedu/register.html
@@ -13,7 +13,7 @@
     <div class="container">
 
       <nav class="navbar navbar-default">
-        <a class="navbar-brand" href="#">Interactive Educator</a>
+        <a class="navbar-brand" href="{% url 'iedu:index' %}">Interactive Educator</a>
       </nav>
 
       {% if registered %}
