--- a/iedu/templates/iedu/index.html
+++ b/iedu/templates/iedu/index.html
@@ -14,7 +14,7 @@
     <div class="container">
       {% if user.is_authenticated %}
         <nav class="navbar navbar-default">
-          <a class="navbar-brand" href="#">Interactive Educator</a>
+          <a class="navbar-brand" href="{% url 'iedu:index' %}">Interactive Educator</a>
           <a class="btn btn-danger navbar-btn navbar_exit" href="{% url 'iedu:logout' %}">Выход</a>
           <p class="navbar-text navbar_user">{{ user.username }}</p>
         </nav>
@@ -28,7 +28,7 @@
                 <span class="icon-bar"></span>
                 <span class="icon-bar"></span>
               </button>
-              <a class="navbar-brand" href="#">Interactive Educator</a>
+              <a class="navbar-brand" href="{% url 'iedu:index' %}">Interactive Educator</a>
             </div>
             <div id="navbar" class="navbar-collapse collapse">
                 <form id="login_form" method="POST" action="{% url 'iedu:login' %}" class="navbar-form navbar-right">
@@ -66,9 +66,7 @@
         </p>
         {% else %}
         <p>Вам потребуется учетная запись для работы с сервисом...</p>
-        <p>
-          <a class="btn btn-lg btn-primary" href="{% url 'iedu:register' %}" role="button">Создать аккаунт</a>
-        </p>
+        <a class="btn btn-lg btn-primary" href="{% url 'iedu:register' %}" role="button">Создать аккаунт</a>
         {% endif %}
       </div>
 
