--- a/iedu/templates/iedu/slide.html
+++ b/iedu/templates/iedu/slide.html
@@ -6,39 +6,55 @@
 
   <head>
     <title>{{ headword }}</title>
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.5/css/bootstrap.min.css">
     <link rel="stylesheet" type="text/css" href="{% static 'iedu/style.css' %}" />
   </head>
 
   <body>
-    <div>
-      <span><h1>{{ headword }}</h1></span>
-      <span>{{ text }}</span>
 
-      {% if question %}
-      <span><p>{{ question.text }}</p></span>
-      {% if errMesg %}
-      <span><p>{{ errMesg }}</p></span>
-      {% endif %}
-      <form method="post" action="{% url 'iedu:slide' %}">
-	{% csrf_token %}
-	{% for choice in question.choice_set.all %}
-	<input type="radio" name="choice" id="choice{{ forloop.counter }}"
-	       value="{{ choice.id }}" />
-	<label for="choice{{ forloop.counter }}">{{ choice.text }}</label><br />
-	{% endfor %}
-	<input type="submit" value="{{ button_value }}" />
-      </form>
+    <div class="container">
+      <nav class="navbar navbar-default">
+        <a class="navbar-brand" href="{% url 'iedu:index' %}">Interactive Educator</a>
+        <a class="btn btn-danger navbar-btn navbar_exit" href="{% url 'iedu:logout' %}">Выход</a>
+        <p class="navbar-text navbar_user">{{ user.username }}</p>
+      </nav>
 
-      {% else %}
-      <form method="post" action="{% url 'iedu:slide' %}">
-	{% csrf_token %}
-	<input type="submit" value="{{ button_value }}"/>
-      </form>
+      <div class="jumbotron slide-jumbotron">
+        <h2>{{ headword }}</h2>
 
-      {% endif %}
+        {% if errMesg %}
+          <div class="alert alert-danger" role="alert">{{ errMesg }}</div>
+        {% endif %}
 
-      <span><p><a href="{% url 'iedu:index' %}">На главный экран</a></p></span>
+        <p>{{ text }}</p>
+
+        <form id="slide-question-form" method="post" action="{% url 'iedu:slide' %}">
+          {% csrf_token %}
+
+          {% if question %}
+            <p class="question-text"><i>{{ question.text }}</i></p>
+
+            {% for choice in question.choice_set.all %}
+              <div class="radio">
+                <label for="choice{{ forloop.counter }}">
+                  <input type="radio" name="choice" id="choice{{ forloop.counter }}" value="{{ choice.id }}">
+                  {{ choice.text }}
+                  <i>(Ответить)</i>
+                </label>
+              </div>
+            {% endfor %}
+          {% else %}
+            <input type="submit" class="btn btn-primary" value="{{ button_value }}" />
+          {% endif %}
+        </form>
+
+      </div>
+
     </div>
+
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.3/jquery.min.js"></script>
+    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.5/js/bootstrap.min.js"></script>
+    <script src="{% static 'iedu/slide.js' %}"></script>
   </body>
 
 </html>
