Static button value for slide without questions; todo-comment; refactoring

--- a/iedu/templates/iedu/slide.html
+++ b/iedu/templates/iedu/slide.html
@@ -44,7 +44,7 @@
               </div>
             {% endfor %}
           {% else %}
-            <input type="submit" class="btn btn-primary" value="{{ button_value }}" />
+            <input type="submit" class="btn btn-primary" value="Следующий слайд" />
           {% endif %}
         </form>
 
