--- a/iedu/templates/iedu/index.html
+++ b/iedu/templates/iedu/index.html
@@ -48,15 +48,15 @@
         </nav>
       {% endif %}
 
-      <div class="alert alert-danger" role="alert">
-        Поле Email не может быть пустым.
-        <br>
-        Длина пароля должна быть больше 6 символов.
-      </div>
-
-      <!--<div class="alert alert-success" role="alert">
-        Спасибо за регистрацию! <a href="{% url 'iedu:index' %}">На главную</a>
-        </div>-->
+      {% if messages %}
+        {% for msg in messages %}
+          {% if msg.level == DEFAULT_MESSAGE_LEVELS.SUCCESS %}
+            <div class="alert alert-success" role="alert">{{ msg }}</div>
+          {% else %}
+            <div class="alert alert-danger" role="alert">{{ msg }}</div>
+          {% endif %}
+        {% endfor %}
+      {% endif %}
 
       <div class="jumbotron index-jumbotron">
         {% if user.is_authenticated %}
