--- a/iedu/templates/iedu/register.html
+++ b/iedu/templates/iedu/register.html
@@ -34,23 +34,46 @@
 
               {% csrf_token %}
 
-              <!--<div class="form-group">{{ user_form.as_p }}</div>
-	      <div class="form-group">{{ profile_form.as_p }}</div>
-              Весртска для форм на бекенде ниже -->
+              <!-- old:
+		  <div class="form-group">{{ user_form.as_p }}</div>
+		  <div class="form-group">{{ profile_form.as_p }}</div>-->
+
+	      {% if user_form.non_field_errors %}
+	      {% for err in user_form.non_field_errors %}
+	      <div class="alert alert-danger" role="alert">{{ err }}</div>
+	      {% endfor %}
+	      {% endif %}
 
               <div class="form-group">
                 <label for="r_username" class="sr-only">Имя</label>
                 <input type="text" id="r_username" name="username" class="form-control" placeholder="Имя" required autofocus>
+		{% if user_form.username.errors %}
+		{% for error in user_form.username.errors %}
+		<div class="alert alert-danger" role="alert">{{ error|escape }}</div>
+		{% endfor %}
+		{% endif %}
               </div>
 
               <div class="form-group">
                 <label for="r_email" class="sr-only">Email</label>
                 <input type="email" id="r_email" name="email" class="form-control" placeholder="Email" required>
+
+		{% if user_form.email.errors %}
+		{% for error in user_form.email.errors %}
+		<div class="alert alert-danger" role="alert">{{ error|escape }}</div>
+		{% endfor %}
+		{% endif %}
               </div>
 
               <div class="form-group">
                 <label for="r_password" class="sr-only">Пароль</label>
                 <input type="password" id="r_password" name="password" class="form-control" placeholder="Пароль" required>
+
+		{% if user_form.password.errors %}
+		{% for error in user_form.password.errors %}
+		<div class="alert alert-danger" role="alert">{{ error|escape }}</div>
+		{% endfor %}
+		{% endif %}
               </div>
 
               <input class="btn btn-lg btn-primary btn-block" type="submit" value="Продолжить">
