refactoring; messages in slide template

--- a/iedu/templates/iedu/slide.html
+++ b/iedu/templates/iedu/slide.html
@@ -19,12 +19,18 @@
         <p class="navbar-text navbar_user">{{ user.username }}</p>
       </nav>
 
+      {% if messages %}
+        {% for msg in messages %}
+          {% if msg.level == DEFAULT_MESSAGE_LEVELS.SUCCESS %}
+            <div class="alert alert-success" role="alert">{{ msg }}</div>
+          {% else %}
+            <div class="alert alert-danger" role="alert">{{ msg }}</div>
+          {% endif %}
+        {% endfor %}
+      {% endif %}
+
       <div class="jumbotron slide-jumbotron">
         <h2>{{ headword }}</h2>
-
-        {% if errMesg %}
-          <div class="alert alert-danger" role="alert">{{ errMesg }}</div>
-        {% endif %}
 
         <p>{{ text }}</p>
 
